line command test

--- a/main.tex
+++ b/main.tex
@@ -12,17 +12,20 @@
 %\usetikzlibrary{positioning}
 %\usepackage{tikzpagenodes}
 
+\include{lines}
 
 \def\tiny{\fontsize{5}{0}\selectfont}
 
 \begin{document}
 \begin{tikzpicture}[remember picture, overlay]
 \tikzset{pics/.cd,
+
   monogram/.style args={#1}{code={
     \def\yin {-- (-1,0)  (1,0) --}
     \def\yang{--}
     \draw [line width=1cm, purple] (-6,0) \csname#1\endcsname (6,0);
   }},
+
   hexagram/.style args={#1 sized #2 by #3}{code={
     \begin{scope}[yshift=-7cm,transform canvas={xscale=#2/12cm,yscale=#2/11cm}]
     \foreach \d [count=\n] in {#1}{
@@ -50,12 +53,12 @@
           , rectangle split parts = 6
           %, rectangle split part align = {center, center}
           ] at (2.5,2.5)
-{The source of nourishment. Awareness of danger brings good fortune. It furthers one to cross the great water.
-\nodepart{two}Turning away from the path. To remain persevering brings good fortune. One should not cross the great water.
-\nodepart{three}Turning to the summit for provision of nourishment brings good fortune. Spying about with sharp eyes like a tiger with insatiable craving. No blame.
-\nodepart{four}Turning away from nourishment. Perseverance brings misfortune. Do not act thus for ten years. Nothing serves to further.
-\nodepart{five}Turning to the summit for nourishment, deviating from the path to seek nourishment from the hill. Continuing to do this brings misfortune.
-\nodepart{six}You let your magic tortoise go, and look at me with the corners of your mouth drooping. Misfortune.
+{\chLine 1 of 1
+\nodepart{two}\chLine 2 of 1
+\nodepart{three}\chLine 3 of 1
+\nodepart{four}\chLine 4 of 1
+\nodepart{five}\chLine 5 of 1
+\nodepart{six}\chLine 6 of 1
 };
   }}  
 }
