--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,31 @@
 \documentclass{minimal}
-\usepackage[a4paper, landscape]{geometry}
+\usepackage[a0paper,landscape,left=0mm,right=0mm,top=0mm,bottom=0mm]{geometry}
+
+\usepackage{calc}
+
+\newlength\bannerheight \setlength\bannerheight{\paperheight}
+\newlength\bannerwidth  \setlength\bannerwidth{10cm}
+\newlength\gridheight   \setlength\gridheight{\paperheight}
+\newlength\gridwidth    \setlength\gridwidth{\paperwidth-\bannerwidth}
+
 
 \usepackage{fontspec}
-\setmainfont{HanWangYanKai}
-
+%\setmainfont{HanWangYanKai}
+\def\toy#1{wirte #1}
 \usepackage{xstring}
 
 \usepackage{tikz}
+
+\pgfmathsetbasenumberlength{6}
+\newcommand\tobin[1]{\pgfmathbin{#1}\pgfmathresult}
+
+\def\intersperse#1#2<#3>{%
+  \if\relax#1\relax\else#1\if\relax#2\relax\else#3\fi\fi%
+  \if\relax#2\relax\else\intersperse#2<#3>\fi}
+
+\newcommand\strtoarr[1]{\expandafter\intersperse#1<,>}
+
+
 \usetikzlibrary{calc}
 \usetikzlibrary{shapes.multipart}
 %\usetikzlibrary{positioning}
@@ -14,8 +33,9 @@
 
 
 \def\tiny{\fontsize{5}{0}\selectfont}
+\def\HUGE{\fontsize{50}{0}\selectfont}
 
-\begin{document}
+\begin{document}\topskip=0pt\noindent
 \begin{tikzpicture}[remember picture, overlay]
 \tikzset{pics/.cd,
   monogram/.style args={#1}{code={
@@ -32,11 +52,11 @@
       }
     \end{scope}
   }},
-  fulle/.style args={#1}{code={
-    \draw[rounded corners=1cm] (0,0) rectangle (10,10);
-    \draw (5,0) -- (5,10);
-    \draw (5,5) -- (10,5);
-    \draw[yshift=-2.5cm,thin] (5,5) -- (10,5);
+  hexamino/.style args={#1}{code={
+    \draw[rounded corners=1cm] (0,0) rectangle (\gridwidth/8,-\gridheight/8);
+    %\draw (5,0) -- (5,10);
+    %\draw (5,5) -- (10,5);
+    %\draw[yshift=-2.5cm,thin] (5,5) -- (10,5);
     \node [ draw
           , rectangle split
           , rectangle split parts = 2
@@ -44,30 +64,36 @@
           ] at (7.5,7.5)
       {\fontsize{10}{0}\selectfont The Nourishment%
        \nodepart{two}\fontsize{100}{0}\selectfont 頤};
-    \fill[red] (7.5,7.5) circle (5pt);
-    \node [ draw, text width = 5cm, inner sep=0.5cm, font=\tiny 
-          , rectangle split
-          , rectangle split parts = 6
-          %, rectangle split part align = {center, center}
-          ] at (2.5,2.5)
-{The source of nourishment. Awareness of danger brings good fortune. It furthers one to cross the great water.
-\nodepart{two}Turning away from the path. To remain persevering brings good fortune. One should not cross the great water.
-\nodepart{three}Turning to the summit for provision of nourishment brings good fortune. Spying about with sharp eyes like a tiger with insatiable craving. No blame.
-\nodepart{four}Turning away from nourishment. Perseverance brings misfortune. Do not act thus for ten years. Nothing serves to further.
-\nodepart{five}Turning to the summit for nourishment, deviating from the path to seek nourishment from the hill. Continuing to do this brings misfortune.
-\nodepart{six}You let your magic tortoise go, and look at me with the corners of your mouth drooping. Misfortune.
-};
+    %\fill[red] (7.5,7.5) circle (5pt);
+    %\node [ draw, text width = 5cm, inner sep=0.5cm, font=\tiny 
+    %      , rectangle split
+    %      , rectangle split parts = 6
+    %      %, rectangle split part align = {center, center}
+    %      ] at (2.5,2.5)
+    %      {A\nodepart{two}B\nodepart{three}C\nodepart{four}D\nodepart{five}E\nodepart{six}F};
+    \node [font=\bfseries\HUGE] at (1,-1) {#1};
   }}  
 }
 
 %\pic at (0,0) {hexagram = {0,0,1,0,0,1} sized 10cm by 10cm};
 %\draw (-5,-5) rectangle (5,5);
-\fill (0,-10) circle (1pt);
-\pic at (0,-10) {fulle=a};
+\fill (0,0) circle (5pt);
+%\pic at (0,-10) {hexamino=a};
 \draw [purple]
   (current page.south east) circle (20pt)
   (current page.north east) circle (20pt)
   (current page.north west) circle (20pt)
   (current page.south west) circle (20pt);
+
+
+\foreach [count=\n] \x in {0,...,63}{
+  \pgfmathbin{\x}
+  \edef\myArr{\strtoarr{\pgfmathresult}}
+  \pic at ({mod(\x,8)/8*\gridwidth},{-int(\x/8)/8*\gridheight}) {hexamino=\n};
+}
+
+
+
+
 \end{tikzpicture}
 \end{document}
